css/globals/_reset.scss
/**
 * Reset
 */

@import "~normalize.css/normalize.css";

/* stylelint-disable selector-max-type */
/* Exception for the reset */
body,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
dl,
dd,
ol,
ul,
li,
form,
fieldset,
legend,
figure,
table,
th,
td,
caption,
hr,
button {
	padding: 0;
	margin: 0;
}

button {
	background-color: transparent;
	border: 0;
	border-radius: 0;
	cursor: pointer;
}

fieldset {
	border: 0;
}

address {
	font-style: normal;
}

[data-whatinput="mouse"] *:focus {
	outline: none;
}

@media (prefers-reduced-motion) {
	transition: none !important;
	animation: unset !important;
}
/* stylelint-enable selector-max-type */

